# couchdb

./: LICENSE  NOTICE  configure.ac  license.skip
src/couchdb/: couch_httpd_auth.erl
src/eldap/: ELDAPv3.erl  ELDAPv3.hrl  Makefile.am
utils/: Makefile.am
